# cryptobotai

./: .env.example  .gitignore  Bug Fixing Guidelines.md  README.md  TODO.md  agent.py  backtester.py  main.py  portfolio.example.json  portfolio.json  pyproject.toml  requirements.txt  secret.key  test.py  visualization.py
agents/: aggressive.json  conservative.json  default.json
doc/: Bug Fixing Guidelines.md  crewai-workflow-diagram.md  crewai-workflow.md
lib/: __init__.py  agent.py  backtester.py  config.py  display.py  visualization.py
lib/agents/: __init__.py  agent.py  backtester.py  data_analyst.py  portfolio_manager.py  risk_manager.py  trader.py
lib/config/: __init__.py  agent_config.py  aggressive.json  buytest.json  config.py  default.json
lib/crews/: ai_agency.py
lib/models/: portfolio.py
lib/tasks/: base.py  performance_evaluation.py  portfolio_management.py  portfolio_overview.py  strategy_development.py  trade_execution.py  trading_decision.py
lib/utils/: __init__.py  api.py  display.py
scripts/: show_portfolio.py
src/: __init__.py  agency.py  crew.py  live_portfolio.json  main.py  py.typed  tasks.py
src/agents/: __init__.py  backtest_trader.py  data_analyst.py  live_trader.py  on_chain.py  portfolio_manager.py  receptionist.py  risk_manager.py  test_trader.py  trader.py  trading_agent.py  virtual_trader.py
src/analysis/: performance.py
src/config/: network.py  portfolio.json
src/data/: market_data.py
src/examples/: main.py
src/flows/: receptionist_flow.py  trader_flow.py
src/services/: llm_service.py
src/tools/: api.py  (+1 more)
(+18 files in other folders)
