[tool.poetry]
name = "cryptobotai"
version = "0.1.0"
description = "AI-powered crypto trading bot"
authors = ["Your Name <your.email@example.com>"]
include = ["src/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.37.0"
torch = "^2.2.0"
openrouter-py = "^0.3.0"
huggingface_hub = "^0.20.0"
python-dotenv = ">=1.0.0"
pydantic = ">=2.0.0"
rich = ">=13.0.0"
crewai = ">=0.11.2"
langchain = ">=0.1.0"
openai = ">=1.0.0"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
ccxt = ">=4.0.0"
aiohttp = ">=3.9.0"
requests = ">=2.31.0"

[tool.mypy]
python_version = "3.10"
strict = true